Changed html and styles of invidual project pages to fix the odd white space created in mobile landscape

--- a/assets/css/1-base/_base.sass
+++ b/assets/css/1-base/_base.sass
@@ -125,8 +125,11 @@ img::-moz-selection
 body
   -webkit-tap-highlight-color: $selection-color
 
+// Accessibility
+
+
+
 // Mobile and Media Query Variables
 
-$mobile: new-breakpoint(min-width 320px max-width 500px, 6)
-
-
+$mobile: new-breakpoint(min-width 300px max-width 500px, 6)
+$mobile-landscape: new-breakpoint(min-width 300px orientation landscape max-width 700px, 6)
