--- a/assets/css/1-base/_vars.sass
+++ b/assets/css/1-base/_vars.sass
@@ -10,6 +10,8 @@ $accent-blue: #3F4C5B
 $bg-color: white
 $selection-color: #C4F0F8
 
+$accessibility-red: #980a0e
+
 // FONTS
 
 $headings-font: Montserrat, sans-serif
